--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
-build:
-   image: docker:latest
-   services:
-   - docker:dind
-   stage: build
-   script:
-     - docker login -u sasawatc -p mooham555
-     - docker build -t sasawatc/kmitl_bike:latest .
-     - docker push sasawatc/kmitl_bike:latest
+build_image:
+    image: docker:git
+    services:
+        - docker:dind
+    script:
+        - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+        - docker build -t registry.gitlab.com/kmitl-bike/kmitl-bike-django .
+        - docker push registry.gitlab.com/kmitl-bike/kmitl-bike-django:latest
+    only:
+        - master
