--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ django-reversion==2.0.8
 djangorestframework==3.6.2
 packaging==16.8
 Pillow==4.0.0
+pycrypto==2.6.1
 pytz==2016.10
 requests==2.13.0
