--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ build_image:
     services:
         - docker:dind
     script:
-        - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
-        - docker build -t registry.gitlab.com/kmitl-bike/kmitl-bike-django .
-        - docker push registry.gitlab.com/kmitl-bike/kmitl-bike-django:latest
+        - sudo docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+        - sudo docker build -t registry.gitlab.com/kmitl-bike/kmitl-bike-django .
+        - sudo docker push registry.gitlab.com/kmitl-bike/kmitl-bike-django:latest
     only:
         - master
