--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,36 @@
+asgiref==1.1.2
+attrs==17.2.0
+autobahn==17.9.3
+Automat==0.6.0
 beautifulsoup4==4.5.3
+channels==1.1.8
+constantly==15.1.0
+daphne==1.3.0
 Django==1.11.4
 django-cors-headers==2.0.2
 django-jet==1.0.6
 django-location-field==2.0.3
 django-reversion==2.0.8
 djangorestframework==3.6.2
+gevent==1.2.2
+graphviz==0.8.1
+greenlet==0.4.12
+hyperlink==17.3.1
+incremental==17.5.0
+numpy==1.13.3
+oauthlib==2.0.4
+olefile==0.44
 packaging==16.8
 Pillow==4.0.0
 pycrypto==2.6.1
+pyparsing==2.2.0
+pypiwin32==219
 pytz==2016.10
 requests==2.13.0
+requests-oauthlib==0.8.0
+six==1.11.0
+Twisted==17.9.0
+txaio==2.8.2
+typing==3.6.2
+websocket-client==0.44.0
+zope.interface==4.4.3
