--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,43 @@
+Automat==0.6.0
+Django==1.11.4
+Pillow==4.0.0
+Twisted==17.9.0
+appdirs==1.4.0
+argparse==1.2.1
+asgiref==2.2.0
+async-timeout==2.0.0
+attrs==17.4.0
+autobahn==18.3.1
 beautifulsoup4==4.5.3
-Django==1.10.6
+cffi==1.9.1
+channels==2.0.2
+constantly==15.1.0
+cryptography==1.7.2
+daphne==2.1.0
 django-cors-headers==2.0.2
+django-filter==1.0.1
+django-guardian==1.4.6
 django-jet==1.0.6
 django-location-field==2.0.3
 django-reversion==2.0.8
 djangorestframework==3.6.2
+enum34==1.1.6
+hyperlink==18.0.0
+idna==2.6
+incremental==17.5.0
+ipaddress==1.0.18
+jet==1.0
+olefile==0.44
 packaging==16.8
-Pillow==4.0.0
+pathlib==1.0.1
+psycopg2==2.6.2
+pyasn1==0.1.9
+pycparser==2.17
 pycrypto==2.6.1
+pyparsing==2.1.10
 pytz==2016.10
 requests==2.13.0
+six==1.10.0
+txaio==2.9.0
+wsgiref==0.1.2
+zope.interface==4.4.3
