--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,3 +53,10 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+
+  deployment:
+    staging:
+      branch: master
+        heroku:
+        appname: kmitl-bike-django
